--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <div data-js="time-icon" class="bg-light mx-auto text-center"></div>
 
       <div data-js="weather-details" class="text-muted text-uppercase text-center">
-        <h5 class="my-3">Nome da Cidade</h5>
+        <h5 data-js="city-name" class="my-3">Nome da Cidade</h5>
 
-        <div class="my-3">Clima</div>
+        <div data-js="city-weather" class="my-3">Clima</div>
 
-        <div class="display-4 my-4">
+        <div data-js="city-temperature" class="display-4 my-4">
           <span>00</span>
           <span>&deg;C</span>
         </div>
